--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "antd": "^5.21.4",
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.7",
     "material-design-icons": "^3.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0"
